--- a/build.gradle
+++ b/build.gradle
@@ -38,24 +38,24 @@ build.dependsOn ('asciidoctor', 'asciidoctorPdf')
 
 task copyManualToSite(type: Copy) {
     from 'build/docs/asciidoc/manual/'
-    into '../../e2immu-site/static/manual/'
+    into '../e2immu-site/static/manual/'
     dependsOn(asciidoctor)
 }
 task copyManualPDFToSite(type: Copy) {
     from file('build/docs/asciidocPdf/manual/000-main.pdf')
-    into '../../e2immu-site/static/'
+    into '../e2immu-site/static/'
     rename '.*', 'manual.pdf'
     dependsOn(asciidoctorPdf)
 }
 
 task copyRoadToSite(type: Copy) {
     from 'build/docs/asciidoc/road-to-immutability/'
-    into '../../e2immu-site/static/road-to-immutability/'
+    into '../e2immu-site/static/road-to-immutability/'
     dependsOn(asciidoctor)
 }
 task copyRoadPDFToSite(type: Copy) {
     from file('build/docs/asciidocPdf/road-to-immutability/000-main.pdf')
-    into '../../e2immu-site/static/'
+    into '../e2immu-site/static/'
     rename '.*', 'road-to-immutability.pdf'
     dependsOn(asciidoctorPdf)
 }
