revert debugging changes for GH action
Signed-off-by: Satyam Kapoor <satyam@satyamkapoor.com>

--- a/.github/workflows/build_and_copy.yml
+++ b/.github/workflows/build_and_copy.yml
@@ -31,10 +31,7 @@ jobs:
           GIT_EMAIL: action@github.com
         run: |
             git clone https://.:${{ secrets.GTOKEN }}@github.com/${{ env.REPO }} target
-            mkdir -p ${{ env.TARGET }}
-            rm -rf ${{ env.TARGET }}/* 
-            echo "ls ${{ env.SOURCE }}"
-            ls ${{ env.SOURCE }}
+            if [ -d ${{ env.TARGET }} ]; then rm -rf ${{ env.TARGET }}/*; fi
             cp -r ${{ env.SOURCE }}* ${{ env.TARGET }}/
             cd target
             git config --local user.email "${{ env.GIT_EMAIL }}"
