--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,11 @@
  */
 
 plugins {
-    id 'org.asciidoctor.jvm.convert' 
-    id 'org.asciidoctor.jvm.pdf' version '3.1.0'
+    id 'org.asciidoctor.jvm.convert' version '3.3.2'
+    id 'org.asciidoctor.jvm.pdf' version '3.3.2'
 }
+
+// "com.google.guava:guava:32.1.3-jre"
 
 repositories {
     mavenCentral()
@@ -35,31 +37,33 @@ asciidoctor {
 
 build.dependsOn ('asciidoctor', 'asciidoctorPdf')
 
-task copyManualToSite(type: Copy) {
-    from 'build/docs/asciidoc/manual/'
-    into '../e2immu-site/static/manual/'
+def docs = '../e2immu-site/static/docs/'
+
+tasks.register('copyManualToSite', Copy) {
+    from 'build/docs/asciidoc/manual.html'
+    into docs
     dependsOn(asciidoctor)
 }
-task copyManualPDFToSite(type: Copy) {
-    from file('build/docs/asciidocPdf/manual/000-main.pdf')
-    into '../e2immu-site/static/'
-    rename '.*', 'manual.pdf'
+
+tasks.register('copyManualPDFToSite', Copy) {
+    from file('build/docs/asciidocPdf/manual.pdf')
+    into docs
     dependsOn(asciidoctorPdf)
 }
 
-task copyRoadToSite(type: Copy) {
-    from 'build/docs/asciidoc/road-to-immutability/'
-    into '../e2immu-site/static/road-to-immutability/'
+tasks.register('copyRoadToSite', Copy) {
+    from 'build/docs/asciidoc/road-to-immutability.html'
+    into docs
     dependsOn(asciidoctor)
 }
-task copyRoadPDFToSite(type: Copy) {
-    from file('build/docs/asciidocPdf/road-to-immutability/000-main.pdf')
-    into '../e2immu-site/static/'
-    rename '.*', 'road-to-immutability.pdf'
+
+tasks.register('copyRoadPDFToSite', Copy) {
+    from file('build/docs/asciidocPdf/road-to-immutability.pdf')
+    into docs
     dependsOn(asciidoctorPdf)
 }
 
-task copyToSite {
+tasks.register('copyToSite') {
     dependsOn(copyManualToSite, copyRoadToSite, copyManualPDFToSite, copyRoadPDFToSite)
 }
 
